# predictions_platform

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  user.rs
frontend/predictions-frontend/: package-lock.json  package.json
frontend/predictions-frontend/public/: index.html
frontend/predictions-frontend/src/: App.css  App.js  Result.js  index.js
