[package]
name = "zuehlke_predictiosn_backend"
version = "0.1.0"
authors = ["Robert <rlee0570@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib="0.4.2"
serde="1.0.101"
serde_derive = "1.0.101"
rocket_cors ="0.5.0"